--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,47 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.paulrps</groupId>
+    <groupId>com.github.paulrps</groupId>
     <artifactId>commitmessagelinter-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>commitmessagelinter-maven-plugin Maven Mojo</name>
+    <description>A Maven plugin to validate git commit message</description>
     <url>http://maven.apache.org</url>
+
+    <organization>
+        <name>PaulRps</name>
+        <url>https://github.com/paulrps</url>
+    </organization>
 
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.plugin.plugin.version>3.6.0</maven.plugin.plugin.version>
     </properties>
 
+    <scm>
+        <url>https://github.com/paulrps/commitmessagelinter-maven-plugin</url>
+        <connection>scm:git:https://github.com/paulrps/commitmessagelinter-maven-plugin.git</connection>
+        <developerConnection>scm:git:https://github.com/paulrps/commitmessagelinter-maven-plugin.git</developerConnection>
+    </scm>
+
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-plugin-plugin</artifactId>
+                    <version>${maven.plugin.plugin.version}</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-site-plugin</artifactId>
+                    <version>3.8.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -25,7 +52,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>${maven.plugin.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>default-descriptor</id>
@@ -36,12 +63,24 @@
         </plugins>
     </build>
 
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-plugin-plugin</artifactId>
+                <version>3.6.0</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>report</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
+        </plugins>
+    </reporting>
+
     <dependencies>
-        <!--    <dependency>-->
-        <!--      <groupId>org.apache.maven</groupId>-->
-        <!--      <artifactId>maven-plugin-api</artifactId>-->
-        <!--      <version>2.0</version>-->
-        <!--    </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -70,15 +109,10 @@
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>log4j</groupId>-->
-        <!--            <artifactId>log4j</artifactId>-->
-        <!--            <version>1.2.17</version>-->
-        <!--        </dependency>-->
-        <dependency>
-            <groupId>org.eclipse.jgit</groupId>
-            <artifactId>org.eclipse.jgit</artifactId>
-            <version>5.7.0.202003110725-r</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.eclipse.jgit</groupId>-->
+<!--            <artifactId>org.eclipse.jgit</artifactId>-->
+<!--            <version>5.7.0.202003110725-r</version>-->
+<!--        </dependency>-->
     </dependencies>
 </project>
